@@ -14,6 +14,8 @@ Version 1.3-svn:
  * WML engine
    * allow_new_game key (default=yes) to prevent [multiplayer] scenarios to
      show up in the multiplayer game creation interface (FR #6397)
+   * new [set_specials] tag to allow custom special in effect tags
+   * obsolete set_special= in [effect] tags
 
 Version 1.1.7:
  * campaigns
